--- a/public/edustage/css/style.css
+++ b/public/edustage/css/style.css
@@ -231,12 +231,14 @@ button:focus {
 
 @media (max-width: 991px) {
   .header_area .navbar .nav .nav-item .nav-link {
-    color: #ffffff;
+    color: #002347;
+    
   }
 }
 
 .header_area .navbar .nav .nav-item .nav-link:after {
   display: none;
+  
 }
 
 .header_area .navbar .nav .nav-item:hover .nav-link, .header_area .navbar .nav .nav-item.active .nav-link {
@@ -455,7 +457,7 @@ button:focus {
 
 .home_banner_area {
   z-index: 1;
-  min-height: 700px;
+  min-height: 600px;
   position: relative;
   background: url(../img/banner/home-banner.jpg) no-repeat center;
   background-size: cover;
@@ -464,21 +466,27 @@ button:focus {
 
 .home_banner_area .banner_inner {
   position: absolute;
-  top: 40%;
+  top: 35%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  z-index: 10;
   width: 100%;
 }
 
 @media (max-width: 991px) {
   .home_banner_area .banner_inner {
-    top: 50%;
+    position: absolute;
+  }
+
+  .home_banner_area .banner_inner .banner_content span {
+    font-size: 20px;
+    color: #002347;
+    font-weight: 500;
   }
 }
+
 
 .home_banner_area .banner_inner .banner_content h2 {
   font-size: 48px;
@@ -487,6 +495,13 @@ button:focus {
 
 .home_banner_area .banner_inner .banner_content p {
   font-size: 20px;
+  color: #002347;
+  font-weight: 500;
+  margin-bottom: 5%;
+}
+
+.home_banner_area .banner_inner .banner_content span {
+  font-size: 50px;
   color: #002347;
   font-weight: 500;
 }
@@ -4224,7 +4239,8 @@ h6 {
   }
 
   .header_area .navbar {
-    background: #868686;
+    background: #002347;
+  
   }
 
   .navbar-toggler[aria-expanded="false"] span:nth-child(2) {
@@ -4279,9 +4295,9 @@ h6 {
 
   .header_area .navbar .nav .nav-item .nav-link {
     line-height: 40px;
-    margin-right: 0px;
+    margin-left: 12px;
     display: block;
-    border-bottom: 1px solid #ededed33;
+    border-bottom: 2px solid #ededed33;
     border-radius: 0px;
   }
 
