--- a/public/edustage/css/style.css
+++ b/public/edustage/css/style.css
@@ -231,7 +231,7 @@ button:focus {
 
 @media (max-width: 991px) {
   .header_area .navbar .nav .nav-item .nav-link {
-    color: #002347;
+    color: #fff;
     
   }
 }
