--- a/public/Login/css/main.css
+++ b/public/Login/css/main.css
@@ -1,89 +1,85 @@
-
-
-
-
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
 @font-face {
   font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
 }
 
 @font-face {
   font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
+  src: url('../fonts/poppins/Poppins-Bold.ttf');
 }
 
 @font-face {
   font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+  src: url('../fonts/poppins/Poppins-Medium.ttf');
 }
 
 @font-face {
   font-family: Montserrat-Bold;
-  src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
+  src: url('../fonts/montserrat/Montserrat-Bold.ttf');
 }
 
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
-	box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 body, html {
-	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+  height: 100%;
+  font-family: Poppins-Regular, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
+  font-family: Poppins-Regular;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
 }
 
 a:focus {
-	outline: none !important;
+  outline: none !important;
 }
 
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
   color: #57b846;
 }
 
 /*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-	margin: 0px;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0px;
 }
 
 p {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
+  font-family: Poppins-Regular;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
 }
 
 ul, li {
-	margin: 0px;
-	list-style-type: none;
+  margin: 0px;
+  list-style-type: none;
 }
 
 
 /*---------------------------------------------*/
 input {
-	outline: none;
-	border: none;
+  outline: none;
+  border: none;
 }
 
 textarea {
@@ -95,39 +91,83 @@ textarea:focus, input:focus {
   border-color: transparent !important;
 }
 
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; }
-input:focus::-moz-placeholder { color:transparent; }
-input:focus:-ms-input-placeholder { color:transparent; }
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
 
-textarea:focus::-webkit-input-placeholder { color:transparent; }
-textarea:focus:-moz-placeholder { color:transparent; }
-textarea:focus::-moz-placeholder { color:transparent; }
-textarea:focus:-ms-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder {
+  color: transparent;
+}
 
-input::-webkit-input-placeholder { color: #999999; }
-input:-moz-placeholder { color: #999999; }
-input::-moz-placeholder { color: #999999; }
-input:-ms-input-placeholder { color: #999999; }
+input:focus::-moz-placeholder {
+  color: transparent;
+}
 
-textarea::-webkit-input-placeholder { color: #999999; }
-textarea:-moz-placeholder { color: #999999; }
-textarea::-moz-placeholder { color: #999999; }
-textarea:-ms-input-placeholder { color: #999999; }
+input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+textarea:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+textarea:focus:-moz-placeholder {
+  color: transparent;
+}
+
+textarea:focus::-moz-placeholder {
+  color: transparent;
+}
+
+textarea:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+input::-webkit-input-placeholder {
+  color: #999999;
+}
+
+input:-moz-placeholder {
+  color: #999999;
+}
+
+input::-moz-placeholder {
+  color: #999999;
+}
+
+input:-ms-input-placeholder {
+  color: #999999;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #999999;
+}
+
+textarea:-moz-placeholder {
+  color: #999999;
+}
+
+textarea::-moz-placeholder {
+  color: #999999;
+}
+
+textarea:-ms-input-placeholder {
+  color: #999999;
+}
 
 /*---------------------------------------------*/
 button {
-	outline: none !important;
-	border: none;
-	background: transparent;
+  outline: none !important;
+  border: none;
+  background: transparent;
 }
 
 button:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 iframe {
-	border: none !important;
+  border: none !important;
 }
 
 
@@ -157,7 +197,7 @@ iframe {
 }
 
 .container-login100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -170,7 +210,7 @@ iframe {
   padding: 15px;
   background-image: url("../images/bg1.jpg");
   background-position: 90%;
- 
+
 }
 
 .wrap-login100 {
@@ -264,7 +304,7 @@ iframe {
   color: rgba(255, 150, 30, 0.8);
 }
 
-.input100:focus + .focus-input100 {
+.input100:focus+.focus-input100 {
   -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
   animation: anim-shadow 0.5s ease-in-out forwards;
 }
@@ -308,7 +348,7 @@ iframe {
   transition: all 0.4s;
 }
 
-.input100:focus + .focus-input100 + .symbol-input100 {
+.input100:focus+.focus-input100+.symbol-input100 {
   color: #da6c12;
   padding-left: 28px;
 }
@@ -380,34 +420,47 @@ iframe {
 
 @media (min-width: 769px) {
   .container-login100 {
-    flex-direction: row; /* Susun elemen secara horizontal */
+    flex-direction: row;
+    /* Susun elemen secara horizontal */
   }
 
   .login100-pic {
-    width: 30%; /* Tetapkan lebar gambar */
-    margin: 0; /* Hilangkan margin tambahan */
-    text-align: left; /* Gambar tetap di kiri */
+    width: 30%;
+    /* Tetapkan lebar gambar */
+    margin: 0;
+    /* Hilangkan margin tambahan */
+    text-align: left;
+    /* Gambar tetap di kiri */
   }
 
   .wrap-login100 {
-    padding: 100px 150px 33px 95px; /* Pertahankan padding awal */
-    width: 900px; /* Ukuran kontainer seperti sebelumnya */
+    padding: 100px 150px 33px 95px;
+    /* Pertahankan padding awal */
+    width: 900px;
+    /* Ukuran kontainer seperti sebelumnya */
   }
 }
 
 @media (max-width: 768px) {
   .wrap-login100 {
-    width: 100%; /* Lebar penuh layar */
-    max-width: 300px; /* Batasi lebar maksimum */
-    height: auto; /* Tinggi menyesuaikan isi */
-    padding: 50px 20px; /* Padding lebih kecil di mobile */
-    flex-direction: column; /* Tata letak vertikal */
-    align-items: center; /* Pusatkan elemen */
+    width: 100%;
+    /* Lebar penuh layar */
+    max-width: 300px;
+    /* Batasi lebar maksimum */
+    height: auto;
+    /* Tinggi menyesuaikan isi */
+    padding: 50px 20px;
+    /* Padding lebih kecil di mobile */
+    flex-direction: column;
+    /* Tata letak vertikal */
+    align-items: center;
+    /* Pusatkan elemen */
     justify-content: center;
   }
 
   .login100-pic {
-    max-width: 100%; /* Sesuaikan ukuran gambar */
+    max-width: 100%;
+    /* Sesuaikan ukuran gambar */
     height: auto;
     margin-bottom: 20px;
     text-align: center;
@@ -415,23 +468,27 @@ iframe {
   }
 
   .login100-pic img {
-    max-width: 80%; /* Sesuaikan ukuran gambar */
+    max-width: 80%;
+    /* Sesuaikan ukuran gambar */
     height: auto;
   }
 
   .login100-form {
-    width: 90%; /* Lebar form hampir penuh */
+    width: 90%;
+    /* Lebar form hampir penuh */
     margin: 0 auto;
   }
 }
 
 @media (max-width: 576px) {
   .wrap-login100 {
-    padding: 50px 10px; /* Kurangi padding lebih kecil */
+    padding: 50px 10px;
+    /* Kurangi padding lebih kecil */
   }
 
   .login100-pic img {
-    max-width: 60%; /* Gambar lebih kecil */
+    max-width: 60%;
+    /* Gambar lebih kecil */
   }
 }
 
